# Lenstool-HPC

./: .gitignore  .gitignore~  DoubletestSISMBench1st  FloattestSISMBench1st  Makefile  README  README.md  env_gilles.sh  env_gilles_daint.sh  env_gilles_greina.sh
ChiBenchmark/: README
ChiBenchmark/lenstoolchi/: INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  config.status  configure  configure.ac
ChiBenchmark/lenstoolchi/doc/: Makefile  datafile.tex  example_par.tex  getting_started.tex  inputfile.tex  instructions-cvs.txt  lenstool.tex  macro.tex  notes-phil.txt  run.tex
ChiBenchmark/lenstoolchi/examples/: README
ChiBenchmark/lenstoolchi/examples/Comparison_GPU/: mod.par  mod.par~  para.out
ChiBenchmark/lenstoolchi/examples/Jauzac/: gal2.cat  imawcs.mul  mod.par~  para.out
ChiBenchmark/lenstoolchi/examples/example_draw_giant_arc/: bestS1.fits  cidbg.reg  cusp.cat  cusp_left.cat  cusp_top.cat  e.reg  fold.cat  mass.fits  para.out  pixel.fits  single.cat  source_v2.fits  test_giant_arc.par  xpa.ls
ChiBenchmark/lenstoolchi/examples/example_with_arcletstat/: gnfw.par  nfw.par  nfw_arclet.cat  run.csh
ChiBenchmark/lenstoolchi/examples/example_with_arcletstat/ref_nfw/: arclet.best  best.par  bestopt.par  para.out  phil.par  phil_piemd.par
ChiBenchmark/lenstoolchi/examples/example_with_cleanlens/: center.dwcs  center.wcs  clean.fits  contour.dwcs  contour.wcs  erreur.fits  imult.fits  input.fits  para.out  source.fits  source.par
ChiBenchmark/lenstoolchi/examples/example_with_errors/: best.par  bestopt.par  e.reg  histogram.txt  image.all  image.cat  image2.cat  log  mass.fits  para.out  prior0.2+-0.1.eps  source.cat  test_errors.par
ChiBenchmark/lenstoolchi/examples/example_with_galaxies/: 1clump_gal.cat  best.par  bestopt.par  cgal.cat  draw  e.reg  histogram.inp  histogram.txt  mass.fits  para.out  plot.inp  test_galaxies.par
ChiBenchmark/lenstoolchi/examples/example_with_images/: best.par  bestopt.par  draw  e.reg  image_wcs.cat  mass.fits  para.out  test_image.par  test_image.par~
ChiBenchmark/lenstoolchi/examples/example_with_sources/: draw  e.reg  image.all  mass.fits  para.out
ChiBenchmark/lenstoolchi/examples_table/: runtest.sh  tab.in  test.tab
ChiBenchmark/lenstoolchi/examples_table/build_tab/: lenstool.tab  runtest.sh  tab.in
ChiBenchmark/lenstoolchi/examples_table/example_gnfw/: README  image.cat  lenstool.tab  mass_gnfw.fits  mass_nfw.fits  mass_th.fits  para.out  profil.eps  source.cat  test_gnfw.par
ChiBenchmark/lenstoolchi/include/: constant.h  dimension.h  errors.h  fitshead.h  fonction.h  fonction.h~  grille.h  structure.h  structure.h~  userstr.h  wcs.h  wcslib.h
ChiBenchmark/lenstoolchi/liblt/: Makefile  Makefile.am  Makefile.in  al_cb_dbl.c  al_cb_int.c  al_sq_dbl.c  al_sq_int.c  al_ve_dbl.c  cholesky.c  fr_cb_dbl.c  fr_cb_int.c  fr_sq_dbl.c  fr_sq_int.c  lt.h  nrutil.c  polint.c  printerror.c  quick.c  rd_ipx.c  rd_ipxs.c  rdf_fits.c  rdf_ipx.c  rdf_ipxs.c  read.c  three_eighths.c  three_eighths2.c  wfits.c  wirth.c  wr_ipx.c  wr_ipxs.c  wrf_ipx.c  wtfits.c
ChiBenchmark/lenstoolchi/liblt/.deps/: al_cb_dbl.Po  al_cb_int.Po  al_sq_dbl.Po  al_sq_int.Po  al_ve_dbl.Po  cholesky.Po  fr_cb_dbl.Po  fr_cb_int.Po  fr_sq_dbl.Po  fr_sq_int.Po  nrutil.Po  polint.Po  printerror.Po  quick.Po  rd_ipx.Po  rd_ipxs.Po  rdf_fits.Po  rdf_ipx.Po  rdf_ipxs.Po  read.Po  three_eighths.Po  three_eighths2.Po  wfits.Po  wirth.Po  wr_ipx.Po  wr_ipxs.Po  wrf_ipx.Po  wtfits.Po
ChiBenchmark/lenstoolchi/perl/: README  area_cl.r  bayes2fits.idl  bayes2topcat.sh  bayesChires.pl  bayesError.idl  bayesError.pl  bayesImage.sh  bayesInsertEvid.sh  bayesMap.idl  bayesMap.py  bayesMass.pl  bayesRemoveEvid.pl  bayesResults.pl  centre.pl  chi2theta.sh  computeRMS.pl  counterImage.sh  draw  frames.pl  garc.pl  gcontour.pl  gianti  grid  histogram.pl  lenstool.ans  ltGUI.sh  median.pl  mk_weight.idl  path.pl  pcl  pclJP  pcontour.pl  pcritic  pdfcheck.pl  pdfcheck2D.pl  pelli  pelliJP  plotcl  plotmap.pl  (+4 more)
ChiBenchmark/lenstoolchi/src/: ._f_shape.c  Makefile  Makefile.am  Makefile.in  al_sq_point.c  amplif.c  amplif_mat.c  amplif_matinv.c  bayesapp.c  bayesys3.c  bicubic_coef.c  bicubic_int.c  brent.c  chi_invim.c  chsigne.c  classer.c  cleanlens.c  comp_chi_osv.c  comp_dchi_osv.c  copyright.c  cor_seeing.c  cor_shear.c  cosmoratio.c  cp_errdiff.c  cp_im.c  cp_images.c  crea_filtre.c  critic_an.c  criticinv.c  criticnew.c  cv_cpsf.c  d_binning.c  d_bruiter.c  d_bruiter_omp.c  d_gauss.c  d_integrer.c  d_poisson.c  d_profil.c  d_rndschechter.c  d_rndtype.c  (+231 more)
ChiBenchmark/lenstoolchi/src/.deps/: al_sq_point.Po  amplif.Po  amplif_mat.Po  amplif_matinv.Po  bayesapp.Po  bayesys3.Po  bicubic_coef.Po  bicubic_int.Po  brent.Po  chi_invim.Po  chsigne.Po  classer.Po  cleanlens.Po  comp_chi_osv.Po  comp_dchi_osv.Po  copyright.Po  cor_seeing.Po  cor_shear.Po  cosmoratio.Po  cp_errdiff.Po  cp_im.Po  cp_images.Po  crea_filtre.Po  critic_an.Po  criticinv.Po  criticnew.Po  cv_cpsf.Po  d_binning.Po  d_bruiter.Po  d_bruiter_omp.Po  d_gauss.Po  d_integrer.Po  d_poisson.Po  d_profil.Po  d_rndschechter.Po  d_rndtype.Po  d_rndz.Po  d_rndzsmail.Po  d_seeing.Po  d_seeing_omp.Po  (+226 more)
ChiBenchmark/lenstoolchi/table_src/: Makefile  Makefile.am  Makefile.in  default.in  default.sh  e_nfwg.c  lens1jnew_func.h  lenstool_tab  lenstool_tab.c  lenstool_tab_func.h  qromo.c  read_bin.c  vd2dlens_func.h
ChiBenchmark/lenstoolchi/table_src/.deps/: e_nfwg.Po  lenstool_tab.Po  midpnt.Po  nrutil.Po  polint.Po  qromo.Po  read_bin.Po
ChiBenchmark/lenstoolchi/utils/: Makefile  Makefile.am  Makefile.in  bayesAmp  bayesAmp.c  bayesBest  bayesBest.c  bayesChires  bayesChires.c  bayesChires.h  bayesDlsDs  bayesDlsDs.c  bayesGrad  bayesGrad.c  bayesImage  bayesImage.c  bayesMap  bayesMap.c  bayesSource  bayesSource.c  histogram.f  histogram.inc  histogram2D.f  regrid.f  regrid1D.f  smooth.f  smooth1D.f  sort.f
ChiBenchmark/lenstoolchi/utils/.deps/: bayesAmp.Po  bayesBest.Po  bayesChires.Po  bayesDlsDs.Po  bayesGrad.Po  bayesImage.Po  bayesMap.Po  bayesSource.Po
GradientBenchmark/: .cproject  .project  Grad.cpp  (+13 more)
(+557 files in other folders)
