# Program Makefile for the lt library
noinst_LIBRARIES = liblt.a

AM_CFLAGS 	= @CFITSIO_HDR@ 

liblt_a_SOURCES = al_sq_dbl.c  al_sq_int.c  al_ve_dbl.c  fr_sq_dbl.c  \
		  fr_sq_int.c  al_cb_dbl.c  al_cb_int.c  fr_cb_dbl.c  \
		  fr_cb_int.c  nrutil.c  polint.c  quick.c \
		  rdf_fits.c  rdf_ipx.c  rdf_ipxs.c  rd_ipx.c  rd_ipxs.c \
		  printerror.c wfits.c wirth.c  wrf_ipx.c  \
		  wr_ipx.c  wr_ipxs.c cholesky.c wtfits.c read.c  \
                  three_eighths.c   three_eighths2.c

EXTRA_DIST	= lt.h
